# serializable_log_record

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md
src/: lib.rs
